--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
         <java.version>17</java.version>
     </properties>
 
+    <dependencyManagement>
+
+    </dependencyManagement>
+
     <build>
         <plugins>
             <plugin>
