--- a/news-source/pom.xml
+++ b/news-source/pom.xml
@@ -67,11 +67,11 @@
             <version>1.5.5.Final</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok-mapstruct-binding</artifactId>
-            <version>0.2.0</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.projectlombok</groupId>-->
+        <!--            <artifactId>lombok-mapstruct-binding</artifactId>-->
+        <!--            <version>0.2.0</version>-->
+        <!--        </dependency>-->
 
     </dependencies>
 
