add gateway dependency

--- a/news-source/pom.xml
+++ b/news-source/pom.xml
@@ -47,31 +47,23 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.mapstruct</groupId>-->
-        <!--            <artifactId>mapstruct</artifactId>-->
-        <!--            <version>1.5.3.Final</version>-->
-        <!--        </dependency>-->
-
-        <!-- MapStruct API -->
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.5.5.Final</version> <!-- یا هر ورژن جدیدتر -->
+            <version>1.5.5.Final</version>
         </dependency>
-
-        <!-- MapStruct Processor -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
             <version>1.5.5.Final</version>
             <scope>provided</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.projectlombok</groupId>-->
-        <!--            <artifactId>lombok-mapstruct-binding</artifactId>-->
-        <!--            <version>0.2.0</version>-->
-        <!--        </dependency>-->
 
     </dependencies>
 
