--- a/news-gateway/src/main/resources/application.properties
+++ b/news-gateway/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=news-gateway
+server.port=8080
+spring.cloud.gateway.routes[0].id=news-call-route
+spring.cloud.gateway.routes[0].uri=http://localhost:8081
+spring.cloud.gateway.routes[0].predicates[0]=Path=/news-call/**
+spring.cloud.gateway.routes[1].id=news-source-route
+spring.cloud.gateway.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.routes[1].predicates[0]=Path=/news-source/**
