--- a/news-gateway/src/main/resources/application.properties
+++ b/news-gateway/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=8080
 spring.cloud.gateway.routes[0].id=news-call-route
 spring.cloud.gateway.routes[0].uri=http://localhost:8081
 spring.cloud.gateway.routes[0].predicates[0]=Path=/news-call/**
+spring.cloud.gateway.routes[0].filters[0]=AuthFilter
+
 spring.cloud.gateway.routes[1].id=news-source-route
 spring.cloud.gateway.routes[1].uri=http://localhost:8082
 spring.cloud.gateway.routes[1].predicates[0]=Path=/news-source/**
